fixed layout and spacing in html code, project complete

--- a/css/index.css
+++ b/css/index.css
@@ -8250,7 +8250,7 @@ h5 {
   color: #22283B;
 }
 .container {
-  width: 90%;
+  width: 80%;
   max-width: 100%;
 }
 .walk-container {
