--- a/less/layout.less
+++ b/less/layout.less
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
-    width: 90%;
+    width: 80%;
     max-width: 100%;
 }
 
